# prompt-refiner

./: .gitignore  CLAUDE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmark/: README.md
benchmark/latency/: README.md  __init__.py  benchmark.py
benchmark/simple/: README.md  __init__.py  benchmark.py  evaluators.py
docs/: benchmark.md  contributing.md  getting-started.md  index.md
docs/api-reference/: analyzer.md  cleaner.md  compressor.md  groomer.md  index.md  packer.md  scrubber.md
docs/examples/: complete-pipeline.md  deduplication.md  html-cleaning.md  index.md  pii-redaction.md  token-analysis.md
docs/modules/: analyzer.md  cleaner.md  compressor.md  overview.md  packer.md  scrubber.md
docs/user-guide/: custom-operations.md  overview.md  pipelines.md
examples/: README.md  all_modules_demo.py  custom_operation.py
examples/analyzer/: precise_counting.py  token_counting.py
examples/cleaner/: html_cleaning.py  unicode_fixing.py  whitespace_normalization.py
examples/compressor/: deduplication.py  smart_truncation.py
examples/packer/: context_packer.py  messages_packer.py  text_packer.py
examples/scrubber/: pii_redaction.py
huggingface/: README.md  app.py  requirements.txt
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/api-reference/: index.html
latest/benchmark/: index.html
latest/contributing/: index.html
latest/examples/: index.html
latest/getting-started/: index.html
latest/search/: search_index.json
src/prompt_groomer/: __init__.py
src/prompt_refiner/: __init__.py
tests/: test_analyzer.py  test_cleaner.py  test_compressor.py  test_groomer.py  test_messages_packer.py  test_packer.py  test_refiner.py  test_scrubber.py  test_text_packer.py
(+37 files in other folders)
